# uva

./: .gitignore  CMakeLists.txt  README.org
src/: judge100_the_3n_plus_1_problem.cpp  judge10137_the_trip.cpp  judge10142_australian_voting.cpp
test/judge10142/: test10142.py
